# weather_prediction

./: .gitignore  LICENSE  main.py  pyproject.toml  setup.py  template.py
config/: config.yaml
notebook/: trials.ipynb
src/weather_prediction/: __init__.py
src/weather_prediction/components/: data_ingestion.py
src/weather_prediction/config/: __init__.py
src/weather_prediction/constants/: __init__.py
src/weather_prediction/entity/: __init__.py
src/weather_prediction/pipeline/: data_ingestion_pipeline.py
src/weather_prediction/utils/: __init__.py
