[project]
name = "weather_prediction"
version = "0.1.0"
description = "End to End Machine Learning Implementation to predict the weather"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ensure>=1.0.4",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
]
